# docs/swagger.yaml
@@ -20,7 +20,7 @@ definitions:
       email:
         type: string
       id:
-        type: string
+        type: integer
       username:
         type: string
     type: object
@@ -33,6 +33,35 @@ info:
   version: "1.0"
 paths:
   /users:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a paginated list of users
+      parameters:
+      - description: Page number
+        in: query
+        name: page
+        type: integer
+      - description: Number of users per page
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+      summary: List users with pagination
+      tags:
+      - Users
     post:
       consumes:
       - application/json
